--- a/System/userparameter_system.conf
+++ b/System/userparameter_system.conf
@@ -2,3 +2,7 @@ UserParameter=tcp.json, ss -ant | awk 'NR>1 {++s[$1]} END {print "{" ;for(k in s
 
 UserParameter=disk.discovery, /etc/zabbix/scripts/disk_discovery.sh
 UserParameter=disk.json[*], iostat -dxkt 1 2 | grep "\b$1\b" | awk 'NR==2 {print "{\"rrqm_s\":",$$2,",\"wrqm_s\":",$$3,",\"r_s\":",$$4,",\"w_s\":",$$5,",\"rkb_s\":",$$6,",\"wkb_s\":",$$7,",\"avgrq_sz\":",$$8,",\"avgqu_sz\":",$$9,",\"await\":",$$10,",\"r_await\":",$$11,",\"w_await\":",$$12,",\"svctm\":",$$13,",\"util\":",$$14,"}"}'
+
+UserParameter=ssl.json[*], echo "{\"RETVAL\": $(( $(( $(date -d "$( echo 'Q' | openssl s_client -connect $1:$2 -servername $3 2>/dev/null | openssl x509 -noout -dates 2>/dev/null | grep
+notAfter | cut -d'=' -f2)" +%s)  - $(date +%s) )) / 24 / 3600 )), \"ISSUER\": \"$(echo 'Q' | openssl s_client -connect $1:$2 -servername $3 2>/dev/null | openssl x509 -noout -issuer 2>/d
+ev/null | grep issuer | awk -F'=|/' '{print $$8}')\"}"
